--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "scrabble-score"
+archivesBaseName = "spark-scrabble"
 version = '1.0'
 mainClassName = "App"
 
 repositories {
- mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
+  compile group: 'com.sparkjava', name: 'spark-core', version: '2.3'
   testCompile group: 'junit', name: 'junit', version: '4.+'
+  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 }
